Fix random spacing bugs

--- a/frontend/src/Landing/MainWindow/Members/DisplayProfile/DisplayProfile.css
+++ b/frontend/src/Landing/MainWindow/Members/DisplayProfile/DisplayProfile.css
@@ -32,11 +32,7 @@
 
 .link{
   margin-right:5%;
-  margin-bottom:5%;
-}
-
-@media all and (max-width:767px){
-  .link{margin-bottom:5%;}
+  margin-bottom:2vh;
 }
 
 .company-info{
